--- a/frontend/src/plugins/message/templates/messageManagementGeneralRibbon.hbs
+++ b/frontend/src/plugins/message/templates/messageManagementGeneralRibbon.hbs
@@ -1,4 +1,4 @@
-<div class="ribbon-inner" style="background-color: {{ this.generalRibbonBgColor }};">
+<div tabindex="0" class="ribbon-inner" style="background-color: {{ this.generalRibbonBgColor }};">
     <div class="ribbon-msg" style="color: {{ this.generalRibbonTextColor }}">
         <div class="ribbon-icon"><i class="fa fa-info-circle fa-fw"></i></div>
         <div class="ribbon-msg-container">{{{ this.generalRibbon }}}</div>
